Thu Sep 23 13:24:54 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ACEXML/tests/tests.mpc:
        * examples/DLL/DLL.mpc:
        * examples/Export/Export.mpc:
        * examples/NT_Service/NT_Service.mpc:
        * examples/Reactor/Ntalker/Reactor_Ntalker.mpc:
        * examples/Web_Crawler/Web_Crawler.mpc:
        * performance-tests/Misc/Misc.mpc:
        * performance-tests/Server_Concurrency/Leader_Follower/Svr_Conc_Leader_Follower.mpc:
        * performance-tests/Server_Concurrency/Queue_Based_Workers/Svr_Conc_Queue_Based_Workers.mpc:
        * performance-tests/Synch-Benchmarks/Synch_Benchmarks.mpc:
        * performance-tests/TCP/TCP.mpc:
        * performance-tests/UDP/UDP.mpc:

          Added an 'exename' setting for the projects in these mpc files.
          The cpp files contain some form of ACE_MAIN which used to be
          recognized by MPC as an entry point.  It is now necessary to set
          exename since MPC will no longer recognize ACE_MAIN as a "main"
          function.

Thu Sep 23 15:13:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Doxygen improvement

Thu Sep 23 07:42:33 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/ACE.cpp:

          Changed buffer and iovec versions of ACE:crc32() to hoist
          computing the end position out of the loop.

Thu Sep 23 14:34:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-dmc.h:
          New config file for the Digital Mars C++ compiler (see
          www.digitalmars.com). Not fully working, but a first version.

        * include/makeinclude/platform_win32_dmc.GNU:
          New GNU file for the DMC compiler, also first version

        * ace/config-win32.h:
          Added check for __DMC__

          More small changes for the DMC compiler will follow

Wed Sep 22 14:40:15 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/ACE.cpp:
